--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.password=1234
 spring.datasource.driver-class-name=org.postgresql.Driver
 #Hibernate gera atualizações automaticas constatemente no schema
 spring.jpa.hibernate.ddl-auto=update
+spring.main.allow-circular-references=true
+spring.jpa.open-in-view= false
